--- a/Resource/app.css
+++ b/Resource/app.css
@@ -40,7 +40,7 @@ img {
 .title {
   padding: 0 10px;
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 600;
 }
 
 .info {
@@ -104,6 +104,9 @@ pre {
 }
 .reply-content {
   padding: 0 10px;
+}
+
+.tap {
   border-bottom: 1px solid #eee;
 }
 
