--- a/Resource/app.css
+++ b/Resource/app.css
@@ -3,6 +3,10 @@ body {
   font-size: 14px;
 }
 
+a, a:visited, a:active {
+  color: inherit;
+}
+
 * {
   word-wrap: break-word;
 }
@@ -121,14 +125,14 @@ pre {
 .panel {
   color: #333;
   background-color: #eee;
-  padding: 10px;
+  padding: 5px 10px;
 }
 .no-more {
   background-color: #eee;
   color: #888;
   text-align: center;
   font-size: 12px;
-  padding: 10px;
+  padding: 5px 10px;
 }
 
 .op {
