--- a/Resource/app.css
+++ b/Resource/app.css
@@ -12,11 +12,11 @@ a, a:visited, a:active {
 }
 
 hr {
-  color: #f5f5f5;
-  border-top: 1px solid #f5f5f5;
-  border-bottom: 0;
-  border-left: 0;
-  border-right: 0;
+/*  color: #f5f5f5;*/
+/*  border-top: 1px solid #f5f5f5;*/
+/*  border-bottom: 0;*/
+/*  border-left: 0;*/
+/*  border-right: 0;*/
 }
 
 p {
@@ -24,7 +24,7 @@ p {
 }
 
 h1,h2,h3,h4,h5,h6 {
-  border-bottom: 1px solid #f5f5f5;
+/*  border-bottom: 1px solid #f5f5f5;*/
 }
 
 ul,ol {
@@ -42,19 +42,14 @@ img {
 }
 
 .title {
-  padding: 0 10px;
+  padding: 10px;
   font-size: 16px;
   font-weight: 500;
 }
 
 .info {
   flex: 1;
-  color: #555;
   font-size: 12px;
-}
-
-.info .loginname {
-  color: #222;
 }
 
 .info1 {
@@ -67,7 +62,6 @@ img {
   height: auto;
   padding: 2px 3px;
   border-radius: 3px;
-  background-color: #eee;
 }
 .avatar {
   width: 36px;
@@ -86,11 +80,17 @@ img {
 }
 
 .content {
-  padding: 0 10px;
+  padding: 10px 10px 0 10px;
+}
+.content p:first-child {
+    margin-top: 0;
+}
+.content p:last-child {
+    margin-bottom: 0;
 }
 
 blockquote {
-  background-color: #eee;
+/*  background-color: #eee;*/
   border-left: 4px solid #aaa;
   margin: 0;
   padding: 5px 10px;
@@ -110,32 +110,66 @@ pre {
   padding: 0 10px;
 }
 
-.tap {
-  border-bottom: 1px solid #eee;
-}
-
 .reply-content:last-child {
   border: 0;
 }
 
 .content p:last-child {
-  margin-bottom: 10px;
+  padding-bottom: 10px;
 }
 
 .panel {
-  color: #333;
-  background-color: #eee;
   padding: 5px 10px;
 }
 .no-more {
-  background-color: #eee;
-  color: #888;
   text-align: center;
   font-size: 12px;
-  padding: 5px 10px;
+  padding: 10px;
 }
 
 .op {
   font-weight: 700;
-  color: #6ba44e;
+  color: #80bd01;
+}
+.divide_Default {
+    border-bottom: 1px solid #f2f3f5;
+}
+.divide_Dark {
+    border-bottom: 1px solid #201f24;
+}
+.cellBackground_Default {
+    background-color: #fff;
+}
+.cellBackground_Dark {
+    background-color: #232227;
+}
+.background_Default {
+    background-color: #f2f3f5;
+}
+.background_Dark {
+    background-color: #201f24;
+}
+.title_Default {
+    color: #0f0f0f;
+}
+.title_Dark {
+    color: #919191;
+}
+.username_Default {
+    color: #353535;
+}
+.username_Dark {
+    color: #7d7d7d;
+}
+.time_Default {
+    color: #778087;
+}
+.time_Dark {
+    color: #778087;
+}
+.tabBackgroundColor_Default {
+    background-color: #f3f3f3;
+}
+.tabBackgroundColor_Dark {
+    background-color: #282828;
 }
